workspace-sf/force-app/main/default/objects/RegraSequencia__c/RegraSequencia__c.object-meta.xml
<CustomObject>
    <label>Regra de Sequência</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regra de Sequências</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>