workspace-sf/force-app/main/default/objects/RegraSequencia__c/fields/conteudo__c.field-meta.xml
<CustomField>
    <fullName>conteudo__c</fullName>
    <label>Conteúdo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>