workspace-sf/force-app/main/default/objects/RegraSequencia__c/fields/IdInformacoes__c.field-meta.xml
<CustomField>
    <fullName>IdInformacoes__c</fullName>
    <label>Id de Informações</label>
    <length>255</length>
    <type>Text</type>
</CustomField>