workspace-sf/force-app/main/default/objects/RegraSequencia__c/fields/proximoConjunto__c.field-meta.xml
<CustomField>
    <fullName>proximoConjunto__c</fullName>
    <label>Próximo Conjunto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>