workspace-sf/force-app/main/default/objects/RegraSequencia__c/fields/Sequencia__c.field-meta.xml
<CustomField>
    <fullName>Sequencia__c</fullName>
    <label>Sequência</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>